--- a/pylint_report/style/default.css
+++ b/pylint_report/style/default.css
@@ -1,5 +1,12 @@
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: sans-serif;
+    padding: 1em;
+    margin: 0;
+    line-height: 1.5;
 }
 
 td
