--- a/pylint_report/style/template.html.j2
+++ b/pylint_report/style/template.html.j2
@@ -14,14 +14,13 @@
   <body>
     <h1><u>Pylint report</u></h1>
     <small>
-      Report generated on {{date}} at {{time}} using <a href={{pylint_report_url}}>pylint-report</a>
+      Report generated on {{date}} at {{time}} using <a href="https://github.com/drdv/pylint-report">pylint-report</a>
     </small>
     <h2>
       <span>Score:</span>
       <span class="score"> {{score}} </span>
       <span> / 10 </span>
     </h2>
-    <!-- modules summary -->
     <ul>
       {% for module in modules.keys() -%}
       {% if module in msg -%}
@@ -59,4 +58,4 @@
     </section>
     {% endfor -%}
   </body>
-</html>
+</html>{# -#}
